--- a/src/app/navigation/matches/matchesNavigation.html
+++ b/src/app/navigation/matches/matchesNavigation.html
@@ -141,10 +141,62 @@
                                         <div class="col-md-4 margin-bottom-10">
                                             <div class="row">
                                                 <div class="col-md-12 margin-top-10">
-                                                    <select class="custom-form-control">
-                                                        <option>18</option>
-                                                        <option>19</option>
-                                                        <option>20</option>
+                                                    <select class="custom-form-control" ng-model="height.start">
+
+                                                        <option value="140">140</option>
+                                                        <option value="141">141</option>
+                                                        <option value="142">142</option>
+                                                        <option value="143">143</option>
+                                                        <option value="144">144</option>
+                                                        <option value="145">145</option>
+                                                        <option value="146">146</option>
+                                                        <option value="147">147</option>
+                                                        <option value="148">148</option>
+                                                        <option value="149">149</option>
+                                                        <option value="150">150</option>
+                                                        <option value="151">151</option>
+                                                        <option value="152">152</option>
+                                                        <option value="153">153</option>
+                                                        <option value="154">154</option>
+                                                        <option value="155">155</option>
+                                                        <option value="156">156</option>
+                                                        <option value="157">157</option>
+                                                        <option value="158">158</option>
+                                                        <option value="159">159</option>
+                                                        <option value="160">160</option>
+                                                        <option value="161">161</option>
+                                                        <option value="162">162</option>
+                                                        <option value="163">163</option>
+                                                        <option value="164">164</option>
+                                                        <option value="165">165</option>
+                                                        <option value="166">166</option>
+                                                        <option value="167">167</option>
+                                                        <option value="168">168</option>
+                                                        <option value="169">169</option>
+                                                        <option value="170">170</option>
+                                                        <option value="171">171</option>
+                                                        <option value="172">172</option>
+                                                        <option value="173">173</option>
+                                                        <option value="174">174</option>
+                                                        <option value="175">175</option>
+                                                        <option value="176">176</option>
+                                                        <option value="177">177</option>
+                                                        <option value="178">178</option>
+                                                        <option value="179">179</option>
+                                                        <option value="180">180</option>
+                                                        <option value="181">181</option>
+                                                        <option value="182">182</option>
+                                                        <option value="183">183</option>
+                                                        <option value="184">184</option>
+                                                        <option value="185">185</option>
+                                                        <option value="186">186</option>
+                                                        <option value="187">187</option>
+                                                        <option value="188">188</option>
+                                                        <option value="189">189</option>
+                                                        <option value="190">190</option>
+                                                        <option value="191">191</option>
+                                                        <option value="192">192</option>
+
                                                     </select>
                                                 </div>
                                             </div>
@@ -152,10 +204,60 @@
                                         <div class="col-md-4 margin-bottom-10">
                                             <div class="row">
                                                 <div class="col-md-12 margin-top-10">
-                                                    <select class="custom-form-control">
-                                                        <option>18</option>
-                                                        <option>19</option>
-                                                        <option>20</option>
+                                                    <select class="custom-form-control" ng-model="height.end">
+                                                        <option value="140">140</option>
+                                                        <option value="141">141</option>
+                                                        <option value="142">142</option>
+                                                        <option value="143">143</option>
+                                                        <option value="144">144</option>
+                                                        <option value="145">145</option>
+                                                        <option value="146">146</option>
+                                                        <option value="147">147</option>
+                                                        <option value="148">148</option>
+                                                        <option value="149">149</option>
+                                                        <option value="150">150</option>
+                                                        <option value="151">151</option>
+                                                        <option value="152">152</option>
+                                                        <option value="153">153</option>
+                                                        <option value="154">154</option>
+                                                        <option value="155">155</option>
+                                                        <option value="156">156</option>
+                                                        <option value="157">157</option>
+                                                        <option value="158">158</option>
+                                                        <option value="159">159</option>
+                                                        <option value="160">160</option>
+                                                        <option value="161">161</option>
+                                                        <option value="162">162</option>
+                                                        <option value="163">163</option>
+                                                        <option value="164">164</option>
+                                                        <option value="165">165</option>
+                                                        <option value="166">166</option>
+                                                        <option value="167">167</option>
+                                                        <option value="168">168</option>
+                                                        <option value="169">169</option>
+                                                        <option value="170">170</option>
+                                                        <option value="171">171</option>
+                                                        <option value="172">172</option>
+                                                        <option value="173">173</option>
+                                                        <option value="174">174</option>
+                                                        <option value="175">175</option>
+                                                        <option value="176">176</option>
+                                                        <option value="177">177</option>
+                                                        <option value="178">178</option>
+                                                        <option value="179">179</option>
+                                                        <option value="180">180</option>
+                                                        <option value="181">181</option>
+                                                        <option value="182">182</option>
+                                                        <option value="183">183</option>
+                                                        <option value="184">184</option>
+                                                        <option value="185">185</option>
+                                                        <option value="186">186</option>
+                                                        <option value="187">187</option>
+                                                        <option value="188">188</option>
+                                                        <option value="189">189</option>
+                                                        <option value="190">190</option>
+                                                        <option value="191">191</option>
+                                                        <option value="192">192</option>
                                                     </select>
                                                 </div>
                                             </div>
@@ -165,7 +267,7 @@
                                                 <div class="col-md-12 margin-top-10">
                                                     <button type="button"
                                                             class="pull-left btn btn-sm btn-outline custom-button"><span
-                                                            class="btn-label-text">Submit</span></button>
+                                                            class="btn-label-text" ng-click="heightfilter()">Submit</span></button>
                                                 </div>
                                             </div>
                                         </div>
